--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/dwyl/hapi-socketio-redis-chat-example#readme",
   "dependencies": {
     "elm-test": "^0.18.6",
+    "forever-monitor": "^1.7.1",
     "hapi": "^16.1.1",
     "hapi-error": "^1.8.0",
     "inert": "^4.2.0",
